--- a/uitest/Tab/TabCon/TabCon/Views/X_2.xaml
+++ b/uitest/Tab/TabCon/TabCon/Views/X_2.xaml
@@ -10,20 +10,32 @@
 		xmlns:ig="http://schemas.infragistics.com/xaml"
 		xmlns:local="clr-namespace:TabCon"
 		xmlns:vm="clr-namespace:TabCon.ViewModels"
+		xmlns:v="clr-namespace:TabCon.Views"
 		mc:Ignorable="d"
         Title="イベント登録"  FontSize="12" 
 		ScrollViewer.HorizontalScrollBarVisibility="Auto" 
 		ScrollViewer.VerticalScrollBarVisibility="Auto" 
-	    WindowStartupLocation="CenterScreen"  Topmost="True"
+	    WindowStartupLocation="CenterScreen"  
 		Width="620" Height="650" Background="White" 
 		AllowDrop="true" 
 		PreviewDragOver="Window_PreviewDragOver" 
 		PreviewDragEnter="Window_PreviewDragEnter" >
 
-	<!--<Window.DataContext>
+	<!--
+		Topmost="True"
+	
+	<Window.DataContext>
 		<vm:X_2ViewModel/>
 	</Window.DataContext>-->
 	<behaviors:Interaction.Triggers>
+		<!--Googleドライブフォルダ内ファイル一覧-->
+
+		<!--<l:InteractionMessageTrigger MessageKey="GoogleDriveShow" Messenger="{Binding Messenger}" >
+			<l:TransitionInteractionMessageAction 
+                WindowType="{x:Type v:W_1}" Mode="Modal" >
+			</l:TransitionInteractionMessageAction>
+		</l:InteractionMessageTrigger>-->
+		
 		<l:InteractionMessageTrigger MessageKey="Close" Messenger="{Binding Messenger}">
 			<l:WindowInteractionMessageAction InvokeActionOnlyWhenWindowIsActive="False" />
 		</l:InteractionMessageTrigger>
