--- a/uitest/Tab/TabCon/TabCon/Views/ParrtsTestView.xaml
+++ b/uitest/Tab/TabCon/TabCon/Views/ParrtsTestView.xaml
@@ -1,4 +1,5 @@
-﻿<Page xmlns:ig="http://schemas.infragistics.com/xaml"  x:Class="TabCon.Views.ParrtsTestView"
+﻿<Page x:Class="TabCon.Views.ParrtsTestView"
+		xmlns:ig="http://schemas.infragistics.com/xaml"  
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,6 +8,7 @@
 	  xmlns:valueeditors="clr-namespace:Microsoft.Expression.Utility.ValueEditors;assembly=Microsoft.Expression.Utility"
 	  xmlns:coloreditor="clr-namespace:Microsoft.Expression.Utility.ValueEditors.ColorEditor;assembly=Microsoft.Expression.Utility"
 	  xmlns:cs_calculator="clr-namespace:CS_Calculator;assembly=CS_Calculator"
+	  xmlns:controls="clr-namespace:TabCon.Controls"
 	  mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ParrtsTestView">
@@ -20,6 +22,8 @@
 			<ColumnDefinition Width="*" />
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions >
+			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="Auto"/>
 			<RowDefinition Height="Auto"/>
 			<RowDefinition Height="Auto"/>
 			<RowDefinition Height="Auto"/>
@@ -139,8 +143,25 @@
 						Margin="5,5,5,5" VerticalAlignment="Center" 
 						Background="#FF000000" Foreground="White" Height="26"  
 							/>
+		<Label  Content="締日 条件①" 
+						Grid.Row="6" Grid.Column="0" 
+							VerticalAlignment="Center" 
+							HorizontalAlignment="Right"
+							/>
 
-
+		<!--<controls:SuppliersClosingDatesControl 
+								Grid.Row="6" Grid.Column="1" 
+								TargetTextBox="{Binding ElementName=SuppliersClosing1}"
+								/>-->
+		<Label  Content="締日 条件②" 
+						Grid.Row="7" Grid.Column="0" 
+							VerticalAlignment="Center" 
+							HorizontalAlignment="Right"
+							/>
+		<!--<Controls:SuppliersClosingDatesControl 
+								Grid.Row="7" Grid.Column="1" 
+								TargetTextBox="{Binding ElementName=SuppliersClosing2}"
+								/>-->
 	</Grid>
 
 
