--- a/uitest/Tab/TabCon/TabCon/Views/W_1Window.xaml
+++ b/uitest/Tab/TabCon/TabCon/Views/W_1Window.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="TabCon.Views.W_1Window"
+﻿<Window
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -12,6 +12,7 @@
 		xmlns:local="clr-namespace:TabCon"
 		xmlns:vm="clr-namespace:TabCon.ViewModels"
 		xmlns:v="clr-namespace:TabCon.Views"
+	  xmlns:controlzex="urn:controlzex" x:Class="TabCon.Views.W_1Window"
 	  mc:Ignorable="d"
  		WindowStartupLocation="CenterScreen"  
 		Topmost="True"
@@ -25,85 +26,95 @@
 	</Window.DataContext>
 
 	<Window.CommandBindings>
-			<CommandBinding Command="ApplicationCommands.New" Executed="NewCmdExecuted"/>
-			<CommandBinding Command="ApplicationCommands.Close" Executed="CloseCmdExecuted"/>
-			<CommandBinding Command="NavigationCommands.BrowseBack" Executed="BackCmdExecuted" CanExecute="BackCmdCanExecute"/>
-			<CommandBinding Command="NavigationCommands.BrowseForward" Executed="ForwardCmdExecuted" CanExecute="ForwardCmdCanExecute"/>
-			<CommandBinding Command="NavigationCommands.Refresh" Executed="RefreshCmdExecuted" CanExecute="RefreshCmdCanExecute"/>
-			<CommandBinding Command="NavigationCommands.BrowseStop" Executed="BrowseStopCmdExecuted" CanExecute="BrowseStopCmdCanExecute"/>
-			<CommandBinding Command="NavigationCommands.GoToPage" Executed="GoToPageCmdExecuted" CanExecute="GoToPageCmdCanExecute"/>
-			<CommandBinding Command="NavigationCommands.IncreaseZoom" Executed="IncreaseZoomCmdExecuted" CanExecute="IncreaseZoomCmdCanExecute"/>
-			<CommandBinding Command="NavigationCommands.DecreaseZoom" Executed="DecreaseZoomCmdExecuted" CanExecute="DecreaseZoomCmdCanExecute"/>
-			<!--<CommandBinding Command="{x:Static v:MainWindow.InjectScriptCommand}" Executed="InjectScriptCmdExecuted" CanExecute="CoreWebView2RequiringCmdsCanExecute"/>-->
-			<!--<CommandBinding Command="{x:Static local:MainWindow.GetCookiesCommand}" Executed="GetCookiesCmdExecuted" CanExecute="CoreWebView2RequiringCmdsCanExecute"/>
+		<CommandBinding Command="ApplicationCommands.New" Executed="NewCmdExecuted"/>
+		<CommandBinding Command="ApplicationCommands.Close" Executed="CloseCmdExecuted"/>
+		<CommandBinding Command="NavigationCommands.BrowseBack" Executed="BackCmdExecuted" CanExecute="BackCmdCanExecute"/>
+		<CommandBinding Command="NavigationCommands.BrowseForward" Executed="ForwardCmdExecuted" CanExecute="ForwardCmdCanExecute"/>
+		<CommandBinding Command="NavigationCommands.Refresh" Executed="RefreshCmdExecuted" CanExecute="RefreshCmdCanExecute"/>
+		<CommandBinding Command="NavigationCommands.BrowseStop" Executed="BrowseStopCmdExecuted" CanExecute="BrowseStopCmdCanExecute"/>
+		<CommandBinding Command="NavigationCommands.GoToPage" Executed="GoToPageCmdExecuted" CanExecute="GoToPageCmdCanExecute"/>
+		<CommandBinding Command="NavigationCommands.IncreaseZoom" Executed="IncreaseZoomCmdExecuted" CanExecute="IncreaseZoomCmdCanExecute"/>
+		<CommandBinding Command="NavigationCommands.DecreaseZoom" Executed="DecreaseZoomCmdExecuted" CanExecute="DecreaseZoomCmdCanExecute"/>
+		<!--<CommandBinding Command="{x:Static v:MainWindow.InjectScriptCommand}" Executed="InjectScriptCmdExecuted" CanExecute="CoreWebView2RequiringCmdsCanExecute"/>-->
+		<!--<CommandBinding Command="{x:Static local:MainWindow.GetCookiesCommand}" Executed="GetCookiesCmdExecuted" CanExecute="CoreWebView2RequiringCmdsCanExecute"/>
 		<CommandBinding Command="{x:Static local:MainWindow.DOMContentLoadedCommand}" Executed="DOMContentLoadedCmdExecuted" CanExecute="CoreWebView2RequiringCmdsCanExecute"/>
 		<CommandBinding Command="{x:Static local:MainWindow.NavigateWithWebResourceRequestCommand}" Executed="NavigateWithWebResourceRequestCmdExecuted" CanExecute="CoreWebView2RequiringCmdsCanExecute"/>
 		<CommandBinding Command="{x:Static local:MainWindow.AddOrUpdateCookieCommand}" Executed="AddOrUpdateCookieCmdExecuted" CanExecute="CoreWebView2RequiringCmdsCanExecute"/>
 		<CommandBinding Command="{x:Static local:MainWindow.DeleteCookiesCommand}" Executed="DeleteCookiesCmdExecuted" CanExecute="CoreWebView2RequiringCmdsCanExecute"/>
 		<CommandBinding Command="{x:Static local:MainWindow.DeleteAllCookiesCommand}" Executed="DeleteAllCookiesCmdExecuted" CanExecute="CoreWebView2RequiringCmdsCanExecute"/>-->
-		</Window.CommandBindings>
+	</Window.CommandBindings>
 
-		<behaviors:Interaction.Triggers>
-			<l:InteractionMessageTrigger MessageKey="Close" Messenger="{Binding Messenger}">
-				<l:WindowInteractionMessageAction InvokeActionOnlyWhenWindowIsActive="False" />
-			</l:InteractionMessageTrigger>
-			<!--Windowが閉じたタイミングでViewModelのDisposeメソッドが呼ばれます-->
-			<behaviors:EventTrigger EventName="Closed">
-				<l:DataContextDisposeAction/>
-			</behaviors:EventTrigger>
-		</behaviors:Interaction.Triggers>
+	<behaviors:Interaction.Triggers>
+		<l:InteractionMessageTrigger MessageKey="Close" Messenger="{Binding Messenger}">
+			<l:WindowInteractionMessageAction InvokeActionOnlyWhenWindowIsActive="False" />
+		</l:InteractionMessageTrigger>
+		<!--Windowが閉じたタイミングでViewModelのDisposeメソッドが呼ばれます-->
+		<behaviors:EventTrigger EventName="Closed">
+			<l:DataContextDisposeAction/>
+		</behaviors:EventTrigger>
+	</behaviors:Interaction.Triggers>
 
-		<DockPanel >
-			<Menu DockPanel.Dock="Top">
-				<MenuItem Header="_File">
-					<MenuItem Header="_New Window" Command="ApplicationCommands.New"/>
-					<MenuItem Header="_Close" Command="ApplicationCommands.Close"/>
-					<MenuItem Header="_Inject Script..."/>
+	<DockPanel >
+		<Menu DockPanel.Dock="Top">
+			<MenuItem Header="_File">
+				<MenuItem Header="_New Window" Command="ApplicationCommands.New"/>
+				<MenuItem Header="_Close" Command="ApplicationCommands.Close"/>
+				<MenuItem Header="_Inject Script..."/>
 
-					<!--<MenuItem Header="_Inject Script..." Command="{x:Static local:MainWindow.InjectScriptCommand}"/>-->
-				</MenuItem>
-				<MenuItem Header="_View">
-					<MenuItem Header="_Increase Zoom" Command="NavigationCommands.IncreaseZoom"/>
-					<MenuItem Header="_Decrease Zoom" Command="NavigationCommands.DecreaseZoom"/>
-				</MenuItem>
-				<MenuItem Header="S_cenario">
-					<!--<MenuItem Header="_DOM Content Loaded" Command="{x:Static local:MainWindow.DOMContentLoadedCommand}"/>
+				<!--<MenuItem Header="_Inject Script..." Command="{x:Static local:MainWindow.InjectScriptCommand}"/>-->
+			</MenuItem>
+			<MenuItem Header="_View">
+				<MenuItem Header="_Increase Zoom" Command="NavigationCommands.IncreaseZoom"/>
+				<MenuItem Header="_Decrease Zoom" Command="NavigationCommands.DecreaseZoom"/>
+			</MenuItem>
+			<MenuItem Header="S_cenario">
+				<!--<MenuItem Header="_DOM Content Loaded" Command="{x:Static local:MainWindow.DOMContentLoadedCommand}"/>
 				<MenuItem Header="_NavigateWithWebResourceRequest" Command="{x:Static local:MainWindow.NavigateWithWebResourceRequestCommand}"/>-->
-					<MenuItem Header="_Cookie Management">
-						<!--<MenuItem Header="Get Cookies" Command="{x:Static local:MainWindow.GetCookiesCommand}"/>
+				<MenuItem Header="_Cookie Management">
+					<!--<MenuItem Header="Get Cookies" Command="{x:Static local:MainWindow.GetCookiesCommand}"/>
 					<MenuItem Header="Add Or Update Cookie" Command="{x:Static local:MainWindow.AddOrUpdateCookieCommand}"/>
 					<MenuItem Header="Delete Cookie" Command="{x:Static local:MainWindow.DeleteCookiesCommand}"/>
 					<MenuItem Header="Delete All Cookies" Command="{x:Static local:MainWindow.DeleteAllCookiesCommand}"/>-->
-					</MenuItem>
-					<!--<MenuItem Header="Intercept _Response" IsCheckable="True" IsChecked="{Binding ElementName=MyWindow, Path=ShowNextWebResponse, Mode=TwoWay}"/>-->
 				</MenuItem>
-			</Menu>
-			<DockPanel x:Name="topPanel"
-							Visibility="{Binding Path=TopPanelVisibility}" 
+				<!--<MenuItem Header="Intercept _Response" IsCheckable="True" IsChecked="{Binding ElementName=MyWindow, Path=ShowNextWebResponse, Mode=TwoWay}"/>-->
+			</MenuItem>
+		</Menu>
+		<DockPanel x:Name="topPanel"
+							Visibility="{Binding TopPanelVisibility}" 
 							DockPanel.Dock="Top" 
 							HorizontalAlignment="Stretch" >
-				<Button x:Name="ButtonHome"
+			<Button x:Name="ButtonHome"
 							Command="{Binding HomeBTCommand}"
 							DockPanel.Dock="Left"
 							Content="Home" 
 							 />
-				<Button DockPanel.Dock="Left" Command="NavigationCommands.BrowseBack">Back</Button>
-				<Button DockPanel.Dock="Left" Command="NavigationCommands.BrowseForward">Forward</Button>
-				<Button DockPanel.Dock="Left" Command="NavigationCommands.Refresh">Refresh</Button>
-				<Button DockPanel.Dock="Left" Command="NavigationCommands.BrowseStop">Stop</Button>
-				<Button DockPanel.Dock="Right"
+			<Button DockPanel.Dock="Left" Command="NavigationCommands.BrowseBack" Content="Back"/>
+			<Button DockPanel.Dock="Left" Command="NavigationCommands.BrowseForward" Content="Forward"/>
+			<Button DockPanel.Dock="Left" Command="NavigationCommands.Refresh" Content="Refresh"/>
+			<Button DockPanel.Dock="Left" Command="NavigationCommands.BrowseStop" Content="Stop"/>
+			<Button DockPanel.Dock="Right"
 							Command="{Binding GoBTCommand}"
-							CommandParameter="{Binding ElementName=addressBar,Path=Text}">Go</Button>
+							CommandParameter="{Binding Text, ElementName=addressBar}" Content="Go"/>
 			<!--Command="NavigationCommands.GoToPage"-->
 
-				<TextBox Name="addressBar" 
-								Text="{Binding Path=TargetURLStr ,Mode=TwoWay }" 
+			<TextBox x:Name="addressBar" 
+								Text="{Binding TargetURLStr, Mode=TwoWay}" 
 								/>
-			</DockPanel>
-			<wv2:WebView2 Name = "webView"
-								Source="{Binding Path=TargetURI ,Mode=TwoWay }" 
+		</DockPanel>
+		<wv2:WebView2 x:Name = "webView"
+								Source="{Binding TargetURI, Mode=TwoWay}" 
+								NavigationStarting="WebView_NavigationStarting" 
+								SourceUpdated="WebView_SourceUpdated" 
+								ContentLoading="WebView_ContentLoading" 
+								WebMessageReceived="WebView_WebMessageReceived" 
+								RequestBringIntoView="WebView_RequestBringIntoView" 
+								TargetUpdated="WebView_TargetUpdated" 
+								MouseUp="WebView_MouseUp" 
+								GotMouseCapture="WebView_GotMouseCapture" 
+								MouseLeftButtonDown="WebView_MouseLeftButtonDown" 
+							 controlzex:KeyboardNavigationEx.AlwaysShowFocusVisual="True" 
 							 >
-				<!---->
+			<!---->
 			<behaviors:Interaction.Triggers>
 				<behaviors:EventTrigger EventName="Loaded">
 					<l:LivetCallMethodAction MethodTarget="{Binding}" MethodName="LoadedWebView"/>
@@ -119,5 +130,5 @@
 	<!--
 	https://developer.microsoft.com/en-us/microsoft-edge/webview2/　の　Evergreen Bootstrapperをインストール-->
 
-		</DockPanel>
+	</DockPanel>
 </Window>
