--- a/uitest/Tab/TabCon/TabCon/Views/X_2.xaml
+++ b/uitest/Tab/TabCon/TabCon/Views/X_2.xaml
@@ -442,41 +442,13 @@
 						Language="jp" 
 						Name="description_wb"/>-->
 			<Label  Grid.Row="12" Grid.Column="0" Content="添付ファイル" 
-							HorizontalAlignment="Right" VerticalAlignment="Top"  Margin="-5,0,5,0" Background="#FFFFFCFC"  />
-			<Button Command="{Binding FileDlogShow}"
-						AutomationProperties.HelpText="ファイル選択" 
-							Width="Auto"  
-							Grid.Row="12" Grid.Column="1" 
-							HorizontalAlignment="Left"  VerticalAlignment="Center" MinWidth="26" MinHeight="26" Margin="20,5" 
-							 >
-				<Button.Background>
-					<ImageBrush ImageSource="/TabCon;component/Resources/file_icon.png"/>
-				</Button.Background>
-			</Button>
-			<Button Command="{Binding FolderDlogShow}"
-							AutomationProperties.HelpText="フォルダ選択" 
-							Grid.Row="12" Grid.Column="1" 
-							 VerticalAlignment="Center" Panel.ZIndex="26" MinWidth="26" 
-							 HorizontalAlignment="Center" Margin="20,5" Height="26"
-							>
-				<Button.Background>
-					<ImageBrush ImageSource="/TabCon;component/Resources/folder_icon.png" Stretch="UniformToFill"/>
-				</Button.Background>
-			</Button>
-			<Button Command="{Binding ExploreShow}"
-							AutomationProperties.HelpText="エクスプローラーからDorp" 
-						Grid.Row="12" Grid.Column="1" 
-							HorizontalAlignment="Right"  VerticalAlignment="Top" MinWidth="26" Panel.ZIndex="26" Height="26" Margin="20,5" 
-							 >
-				<Button.Background>
-					<ImageBrush ImageSource="/TabCon;component/Resources/explore_icon.png" Stretch="UniformToFill"/>
-				</Button.Background>
-			</Button>
-			<!--<Button Command="{Binding GoogleDriveShow}"
-						Content="GoogleDrive" 
-						Grid.Row="12" Grid.Column="2" 
-							HorizontalAlignment="Right"  VerticalAlignment="Top" MinWidth="26"
-							 />-->
+							HorizontalAlignment="Right" Background="#FFFFFCFC"  />
+			<Button Command="{Binding GoogleDriveShow}"
+						Content="{Binding GoogleDriveFolderName}" 
+						Margin="0,5,5,5"
+							Grid.Row="12" Grid.Column="1" Grid.ColumnSpan="2"
+							HorizontalAlignment="Stretch"  VerticalAlignment="Stretch"
+							 />
 			<StackPanel Orientation="Horizontal" 	HorizontalAlignment="Right" Grid.Row="12" Grid.Column="3" >
 				<Label  x:Name="attachments_count_lb" 
 							Content="{Binding Path=AttachmentsCount}" 
@@ -485,11 +457,41 @@
 							HorizontalAlignment="Right" VerticalAlignment="Top"  Margin="-5,0,5,0" Background="#FFFFFCFC"  />
 
 			</StackPanel>
-			<StackPanel   Grid.Row="12" Grid.Column="1"   Grid.ColumnSpan="3" Orientation="Horizontal"  
+			<Button Command="{Binding FileDlogShow}"
+						AutomationProperties.HelpText="ファイル選択" 
+							Width="Auto"  
+							Grid.Row="13" Grid.Column="0" 
+							HorizontalAlignment="Left"  VerticalAlignment="Top" MinWidth="26" MinHeight="26" Margin="5,5" 
+							 >
+				<Button.Background>
+					<ImageBrush ImageSource="/TabCon;component/Resources/file_icon.png"/>
+				</Button.Background>
+			</Button>
+			<Button Command="{Binding FolderDlogShow}"
+							AutomationProperties.HelpText="フォルダ選択" 
+							Grid.Row="13" Grid.Column="0" 
+							 VerticalAlignment="Top" Panel.ZIndex="26" MinWidth="26" 
+							 HorizontalAlignment="Center" Margin="5,5" Height="26"
+							>
+				<Button.Background>
+					<ImageBrush ImageSource="/TabCon;component/Resources/folder_icon.png" Stretch="UniformToFill"/>
+				</Button.Background>
+			</Button>
+			<Button Command="{Binding ExploreShow}"
+							AutomationProperties.HelpText="エクスプローラーからDorp" 
+							Grid.Row="13" Grid.Column="0" 
+							HorizontalAlignment="Right"  VerticalAlignment="Top" MinWidth="26" Panel.ZIndex="26" Height="26" 
+							Margin="5,5" 
+							 >
+				<Button.Background>
+					<ImageBrush ImageSource="/TabCon;component/Resources/explore_icon.png" Stretch="UniformToFill"/>
+				</Button.Background>
+			</Button>
+			<!--<StackPanel   Grid.Row="12" Grid.Column="1"   Grid.ColumnSpan="3" Orientation="Horizontal"  
 								HorizontalAlignment="Stretch"  VerticalAlignment="Top"	Width="453"  Margin="0,0,0,8" 
 								Panel.ZIndex="10" 
 								Name="attachments_sp" 
-				/>
+				/>-->
 			<Grid Grid.Row="13" Grid.Column="1"   Grid.ColumnSpan="3" >
 				<ScrollViewer Height="80" MaxHeight="120" >
 
