--- a/uitest/Tab/TabCon/TabCon/Views/ParrtsTestView.xaml
+++ b/uitest/Tab/TabCon/TabCon/Views/ParrtsTestView.xaml
@@ -9,7 +9,7 @@
 	  xmlns:coloreditor="clr-namespace:Microsoft.Expression.Utility.ValueEditors.ColorEditor;assembly=Microsoft.Expression.Utility"
 	  xmlns:cs_calculator="clr-namespace:CS_Calculator;assembly=CS_Calculator"
 	  xmlns:controls="clr-namespace:TabCon.Controls"
-	  mc:Ignorable="d" 
+		mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ParrtsTestView">
 	<Grid Margin="0,0,0,0" >
@@ -143,25 +143,28 @@
 						Margin="5,5,5,5" VerticalAlignment="Center" 
 						Background="#FF000000" Foreground="White" Height="26"  
 							/>
+
 		<Label  Content="締日 条件①" 
 						Grid.Row="6" Grid.Column="0" 
 							VerticalAlignment="Center" 
 							HorizontalAlignment="Right"
 							/>
+		<controls:SuppliersClosingDateControl 
+				SuppliersClosingDate="{Binding SuppliersClosing1}"
+				Grid.Row="6" Grid.Column="1"  Grid.ColumnSpan="2"
+			/>
 
-		<!--<controls:SuppliersClosingDatesControl 
-								Grid.Row="6" Grid.Column="1" 
-								TargetTextBox="{Binding ElementName=SuppliersClosing1}"
-								/>-->
 		<Label  Content="締日 条件②" 
 						Grid.Row="7" Grid.Column="0" 
 							VerticalAlignment="Center" 
 							HorizontalAlignment="Right"
 							/>
-		<!--<Controls:SuppliersClosingDatesControl 
-								Grid.Row="7" Grid.Column="1" 
-								TargetTextBox="{Binding ElementName=SuppliersClosing2}"
-								/>-->
+		<controls:SuppliersClosingDateControl 
+					SuppliersClosingDate="{Binding SuppliersClosing2}"
+					Grid.Row="7" Grid.Column="1"  Grid.ColumnSpan="2"
+				/>
+
+
 	</Grid>
 
 
