--- a/uitest/Tab/TabCon/TabCon/Controls/SuppliersClosingDatesWindow.xaml
+++ b/uitest/Tab/TabCon/TabCon/Controls/SuppliersClosingDatesWindow.xaml
@@ -5,21 +5,23 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TabCon.Controls"
         mc:Ignorable="d"
-		Width="112"
-		Height="168"
 		Topmost="True" ResizeMode="NoResize" 
-		x:Name="parent"
-        Title="日選択" >
+        Title="日選択"
+		Width="120" 
+		Height="182"
+		>
+	<!--d:DesignWidth="118" 
+		d:DesignHeight="164"-->
+
 	<Window.Resources>
 		<Style TargetType="Button">
-			<Setter Property="Width" Value="20"/>
-			<Setter Property="Height" Value="20"/>
+			<Setter Property="Width" Value="22"/>
+			<Setter Property="Height" Value="22"/>
 			<Setter Property="Margin" Value="1"/>
 			<Setter Property="Background" Value="White"/>
 		</Style>
-		<!--<Setter Property="BorderBrush" Value="Gray"/>-->
 	</Window.Resources>
-	<Grid DataContext="{Binding ElementName=parent}"
+	<Grid Name="BaceGrid"
 				Background="DarkGray" >
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition  Width="Auto"  />
@@ -56,7 +58,8 @@
 					Grid.Column="3"
 					Click="Button_Click"
 					/>
-		<Button Content="5"
+		<Button Name="XEndBT" 
+					Content="5"
 					Grid.Row="0" 
 					Grid.Column="4"
 					Click="Button_Click"
@@ -165,7 +168,8 @@
 					Click="Button_Click"
 					/>
 
-		<Button Content="26"
+		<Button Name="YEndBT"
+					Content="26"
 					Grid.Row="5" 
 					Grid.Column="0"
 					Click="Button_Click"
@@ -185,12 +189,12 @@
 					Grid.Column="3"
 					Click="Button_Click"
 					/>
-		<TextBox 
+		<!--<TextBox 
 				Text="{Binding Path=DisplayStr, Mode=OneWay}" 
 				Grid.Row="5" 
 				Grid.Column="4"
 				Foreground="Magenta"
-			/>
+			/>-->
 		<!--Background="Transparent"-->
 
 	</Grid>
