--- a/uitest/Tab/TabCon/TabCon/Assets/CheckboxResource.xaml
+++ b/uitest/Tab/TabCon/TabCon/Assets/CheckboxResource.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:igDP="http://infragistics.com/DataPresenter"
-                    xmlns:local="clr-namespace:TabCon.Assets">
+                    xmlns:local="clr-namespace:TabCon.Assets"
+					>
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Brushes.xaml"/>
     </ResourceDictionary.MergedDictionaries>
