--- a/uitest/Tab/TabCon/TabCon/Assets/Global.xaml
+++ b/uitest/Tab/TabCon/TabCon/Assets/Global.xaml
@@ -1,9 +1,5 @@
 ﻿<ResourceDictionary 
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:resources="clr-namespace:TabCon.Resources"
-    xmlns:converters="clr-namespace:TabCon.Converters" 
-    xmlns:System="clr-namespace:System;assembly=mscorlib">
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
 
 <ResourceDictionary.MergedDictionaries>
     
