--- a/uitest/Tab/TabCon/CS_Calculator/CS_CalculatorControl.xaml
+++ b/uitest/Tab/TabCon/CS_Calculator/CS_CalculatorControl.xaml
@@ -16,7 +16,7 @@
 	<UserControl.Resources>
 		<Style TargetType="Button">
 			<Setter Property="FontSize" Value="24" />
-			<Setter Property="MinHeight" Value="48" />
+			<Setter Property="MinHeight" Value="38" />
 			<Setter Property="Foreground" Value="Black" />
 			<Setter Property="Margin" Value="2" />
 			<Setter Property="VerticalAlignment" Value="Stretch" />
@@ -48,7 +48,7 @@
                          Value="True">
 					<Setter TargetName="border"
                             Property="Background"
-                            Value="#FF154F99" /> 
+                            Value="#FF154F99" />
 					<Setter TargetName="border"
                             Property="TextBlock.Foreground"
                             Value="White" />
@@ -59,34 +59,35 @@
 
 	<Grid>
 		<Grid.ColumnDefinitions>
-			<ColumnDefinition MinWidth="65" Width="*" />
-			<ColumnDefinition MinWidth="65" Width="*" />
-			<ColumnDefinition MinWidth="65" Width="*" />
-			<ColumnDefinition MinWidth="65"  Width="*" />
+			<ColumnDefinition MinWidth="45" Width="23*" />
+			<ColumnDefinition Width="23*"/>
+			<ColumnDefinition MinWidth="45" Width="46*" />
+			<ColumnDefinition MinWidth="45" Width="46*" />
+			<ColumnDefinition MinWidth="45"  Width="46*" />
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions >
 			<RowDefinition Height="Auto"/>
 			<RowDefinition Height="Auto"/>
-			<RowDefinition Height="*" MinHeight="52"/>
-			<RowDefinition Height="*" MinHeight="52"/>
-			<RowDefinition Height="*" MinHeight="52"/>
-			<RowDefinition Height="*" MinHeight="52"/>
-			<RowDefinition MinHeight="52"/>
+			<RowDefinition />
+			<RowDefinition />
+			<RowDefinition />
+			<RowDefinition />
+			<RowDefinition/>
 		</Grid.RowDefinitions>
 
 		<StackPanel Orientation="Horizontal"
 							HorizontalAlignment="Stretch"  VerticalAlignment="Top"
-							Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4">
+							Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5">
 		</StackPanel>
 		<Label x:Name="CalcResult" 
-						Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"
+						Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4"
 						VerticalAlignment="Top" HorizontalAlignment="Stretch"
 						MinWidth="150"
 						FontSize="18"/>
 		<!--
 						Content="{Binding CResult ,Mode=TwoWay}"-->
 		<DataGrid x:Name="CalcProgress" 
-							Grid.Row="0" Grid.Column="3"
+							Grid.Row="0" Grid.Column="4"
 							HeadersVisibility="None"
 							AutoGenerateColumns="True"
 							ColumnWidth="SizeToCells"
@@ -102,7 +103,7 @@
 		</DataGrid>
 
 		<StackPanel Orientation="Horizontal" HorizontalAlignment="Right"
-							Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4">
+							Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="5">
 			<Label x:Name="CalcOperation" Content="" Margin="10,0,5,0"/>
 			<TextBox x:Name="CalcProcess"
 							HorizontalAlignment="Stretch"
@@ -113,21 +114,21 @@
 		<Button x:Name="ClearBt" Content="C&#xa;BackSpace"  FontSize="12"
 					Grid.Row="2" Grid.Column="0"
 					Template="{StaticResource Calcbutton}"
-					Click="ClearBt_Click">
+					Click="ClearBt_Click" Grid.ColumnSpan="2">
 		</Button>
 		<!--Command="{Binding ClearClick}"-->
 		<Button x:Name="SlashBt" Content="/" 
-					Grid.Row="2" Grid.Column="1" FontSize="14"
+					Grid.Row="2" Grid.Column="2" FontSize="14"
 					Template="{StaticResource Calcbutton}"
 					Click="SlashBt_Click"  />
 		<!--Command="{Binding SlashClick}"-->
 		<Button x:Name="AsteriskBt" Content="*" 
-					Grid.Row="2" Grid.Column="2"
+					Grid.Row="2" Grid.Column="3"
 					Template="{StaticResource Calcbutton}"
 					Click="AsteriskBt_Click"  />
 		<!--Command="{Binding AsteriskClick}"-->
 		<Button x:Name="MinusBt" Content="-" 
-					Grid.Row="2" Grid.Column="3"
+					Grid.Row="2" Grid.Column="4"
 					Template="{StaticResource Calcbutton}"
 					Click="MinusBt_Click" />
 		<!--Command="{Binding MinusClick}"-->
@@ -135,30 +136,30 @@
 		<Button x:Name="SevenBt" Content="7" 
 					Grid.Row="3" Grid.Column="0"
 					Template="{StaticResource Calcbutton}"
-					Click="SevenBt_Click"  />
+					Click="SevenBt_Click" Grid.ColumnSpan="2"  />
 		<!--Command="{Binding SevenClick}"-->
 		<Button x:Name="EightBt" Content="8" 
-					Grid.Row="3" Grid.Column="1"
+					Grid.Row="3" Grid.Column="2"
 					Template="{StaticResource Calcbutton}"
 					Click="EightBt_Click"  />
 		<!--Command="{Binding EightClick}"-->
 		<Button x:Name="NineBt" Content="9" 
-					Grid.Row="3" Grid.Column="2"
+					Grid.Row="3" Grid.Column="3"
 					Template="{StaticResource Calcbutton}"
 					Click="NineBt_Click"  />
 		<!--Command="{Binding NineClick}"-->
 		<Button x:Name="FourBt" Content="4" 
 					Grid.Row="4" Grid.Column="0"
 					Template="{StaticResource Calcbutton}"
-					Click="FourBt_Click"  />
+					Click="FourBt_Click" Grid.ColumnSpan="2"  />
 		<!--Command="{Binding FourBtClick}"-->
 		<Button x:Name="FiveBt" Content="5" 
-					Grid.Row="4" Grid.Column="1"
+					Grid.Row="4" Grid.Column="2"
 					Template="{StaticResource Calcbutton}"
 					Click="FiveBt_Click"  />
 		<!--Command="{Binding FiveClick}"-->
 		<Button x:Name="SixBt" Content="6" 
-					Grid.Row="4" Grid.Column="2"
+					Grid.Row="4" Grid.Column="3"
 					Template="{StaticResource Calcbutton}"
 					Click="SixBt_Click"  />
 		<!--Command="{Binding SixClick}"-->
@@ -166,15 +167,15 @@
 		<Button x:Name="OneBt" Content="1" 
 					Grid.Row="5" Grid.Column="0"
 					Template="{StaticResource Calcbutton}"
-					Click="OneBt_Click"  />
+					Click="OneBt_Click" Grid.ColumnSpan="2"  />
 		<!--Command="{Binding OneBtClick}"-->
 		<Button x:Name="TwoBt" Content="2" 
-					Grid.Row="5" Grid.Column="1"
+					Grid.Row="5" Grid.Column="2"
 					Template="{StaticResource Calcbutton}"
 					Click="TwoBt_Click"  />
 		<!--Command="{Binding TwoClick}"-->
 		<Button x:Name="ThreeBt" Content="3" 
-					Grid.Row="5" Grid.Column="2"
+					Grid.Row="5" Grid.Column="3"
 					Template="{StaticResource Calcbutton}"
 					Click="ThreeBt_Click"  />
 		<!--Command="{Binding ThreeClick}"-->
@@ -182,27 +183,27 @@
 		<Button x:Name="ClearAllBt" Content="CE&#xa;Delete"  FontSize="12"
 					Grid.Row="6" Grid.Column="0"
 					Template="{StaticResource Calcbutton}"
-					Click="ClearAllBt_Click"
+					Click="ClearAllBt_Click" Grid.ColumnSpan="2"
 					/>
 		<Button x:Name="ZeroBt" Content="0" 
-					Grid.Row="6" Grid.Column="1"
+					Grid.Row="6" Grid.Column="2"
 					Template="{StaticResource Calcbutton}"
 					Click="ZeroBt_Click" />
 		<!--Command="{Binding ZeroClick}"-->
 		<Button x:Name="PeriodBt" Content="." 
-					Grid.Row="6" Grid.Column="2"
+					Grid.Row="6" Grid.Column="3"
 					Template="{StaticResource Calcbutton}"
 					Click="PeriodBt_Click"  />
 		<!--Command="{Binding PeriodClick}"-->
 
 		<Button x:Name="PlusBt" Content="+" 
 					Template="{StaticResource Calcbutton}"
-					Grid.Row="3" Grid.Column="3" Grid.RowSpan="2"
+					Grid.Row="3" Grid.Column="4" Grid.RowSpan="2"
 					Height="106"
 					Click="PlusBt_Click"  />
 		<!--Command="{Binding PlusClick}"-->
 		<Button x:Name="EnterBt" Content="Enter"  FontSize="12"
-					Grid.Row="5" Grid.Column="3" Grid.RowSpan="2"
+					Grid.Row="5" Grid.Column="4" Grid.RowSpan="2"
 					Template="{StaticResource Calcbutton}"
 					Height="106"
 				Click="EnterBt_Click"  />
