--- a/uitest/calc/CalcTest/WpfApp1/Views/ParrtsTestView.xaml
+++ b/uitest/calc/CalcTest/WpfApp1/Views/ParrtsTestView.xaml
@@ -47,6 +47,20 @@
 						Text="{Binding CalcTexWidth,Mode=TwoWay}"
 						Margin="5,5,5,5" VerticalAlignment="Center" TextChanged="CalcTexWidth_TextChanged"  
 						/>
+			<Label  Content="表示位置:x" 
+					Margin="5,5,0,5" VerticalAlignment="Center"  
+					/>
+			<TextBox 	x:Name="CalcTextShowX"
+						Text="{Binding CalcTextShowX,Mode=TwoWay}"
+						Margin="0,5,5,5" VerticalAlignment="Center" TextChanged="CalcTextShow_TextChanged" 
+						/>
+			<Label  Content=":y" 
+					Margin="5,5,0,5" VerticalAlignment="Center"  
+					/>
+			<TextBox 	x:Name="CalcTextShowY"
+						Text="{Binding CalcTextShowY,Mode=TwoWay}"
+						Margin="0,5,5,5" VerticalAlignment="Center" TextChanged="CalcTextShow_TextChanged" 
+						/>
 			<Label  Content="ダイアログタイトル" 
 					Margin="5,5,5,5" VerticalAlignment="Center"  
 					/>
@@ -70,7 +84,10 @@
 			<cs_calculator:CalculatorButton 
 						x:Name="CalcCallBt" 
 						TargetTextBox="{Binding ElementName=Bt2Tbox}"
-						ViewTitle="{Binding ElementName=CalcTextDLogTitol}"/>
+						ViewTitle="{Binding ElementName=CalcTextDLogTitol}"
+						ShowX="{Binding ElementName=CalcTextShowX}"
+						ShowY="{Binding ElementName=CalcTextShowY}"
+						/>
 
 
 		</StackPanel>
